== 0.3.5
* `query` CLI command to access protected resources (Seth)

== 0.3.4 2009-05-06

* OAuth::Client::Helper uses OAuth::VERSION (chadisfaction)
* Fix OAuth::RequestProxy::ActionControllerRequest's handling of params
  (Tristan Groléat)

== 0.3.3 2009-05-04

* Corrected OAuth XMPP namespace (Seth)
* Improved error handling for invalid Authorization headers (Matt Sanford)
* Fixed signatures for non-ASCII under $KCODE other than 'u' (Matt Sanford)
* Fixed edge cases in ActionControllerRequestProxy where params were being
  incorrectly signed (Marcos Wright Kuhns)
* Support for arguments in OAuth::Consumer#get_access_token (Matt Sanford)
* Add gem version to user-agent header (Matt Sanford)
* Handle input from aggressive form encoding libraries (Matt Wood)

== 0.3.2 2009-03-23

* 2xx statuses should be treated as success (Anders Conbere)
* Support applications using the MethodOverride Rack middleware (László Bácsi)
* `authorize` command for `oauth` CLI (Seth)
* Initial support for Problem Reporting extension (Seth)
* Verify SSL certificates if CA certificates are available (Seth)
* Fixed ActionController parameter escaping behavior (Thiago Arrais, László
  Bácsi, Brett Gibson, et al)
* Fixed signature calculation when both options and a block were provided to
  OAuth::Signature::Base#initialize (Seth)
* Added help to the 'oauth' CLI (Seth)
* Fixed a problem when attempting to normalize MockRequest URIs (Seth)

== 0.3.1 2009-1-26

* Fixed a problem with relative and absolute token request paths. (Michael
  Wood)

== 0.3.0 2009-1-25

* Support ActionController::Request from Edge Rails (László Bácsi)
* Correctly handle multi-valued parameters (Seth)
* Added #normalized_parameters to OAuth::RequestProxy::Base (Pelle)
* OAuth::Signature.sign and friends now yield the RequestProxy instead of the
  token when the passed block's arity is 1. (Seth)
* Token requests are made to the configured URL rather than generating a